Add active state of nav element

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			</div>
 			<nav>
 				<ul>
-					<li><img src="assets/icon-github.svg" alt="Show all issues"><a href="#">All</a><span>12</span></li>
-					<li><img src="assets/icon-open-issue.svg" alt="Show open issues"><a href="#">Open</a><span>4</span></li>
-					<li><img src="assets/icon-closed-issue.svg" alt="Show closed issues"><a href="#">Closed</a><span>8</span></li>
+					<li><a href="#"><img src="assets/icon-github.svg" alt="Show all issues">All<span>12</span></a></li>
+					<li><a href="#"><img src="assets/icon-open-issue.svg" alt="Show open issues">Open<span>4</span></a></li>
+					<li><a href="#"><img src="assets/icon-closed-issue.svg" alt="Show closed issues">Closed<span>8</span></a></li>
 				</ul>
 			</nav>
 		</aside>
